--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+/* Review your course home page CSS a look for colors, fonts, sizes, and other values that are repeated. */
+/* Replace those repeated CSS property values with CSS variables. */
+:root {
+  --border: 1px solid black;
+  --padding: 1rem;
+}
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -13,7 +27,7 @@ h1 {
 img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--border);
     padding: 2px;
     box-shadow: 0 0 30px grey;
 }
@@ -27,22 +41,31 @@ aside {
     width: 20rem;
     margin: 1rem;
     border: 1px solid rgba(0 0 0 / 0.2);
-    padding: 1rem;
+    padding: var(--padding);
     background-color: #eee;
     color: #333;
     text-align: center;
 }
-aside img {
-    width: 200px;
-    height: auto;
-}
 main img {
     width: 150px;
     height: auto;
+    float: right;
 }
 p { padding: 0;}
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+/* class selectors */
+.box {
+    margin: 1rem;
+  border: 1px solid rgb(0 0 0 / 10%);
+  padding: var(--padding);
+  background-color: #ddd;
+  color: #000;
+}
+aside {
+      width: 20em;
+  text-align: center;
 }
