--- a/styles/style.css
+++ b/styles/style.css
@@ -124,3 +124,29 @@ main {
   grid-column: 2 / 3;
   margin: 1rem;
 }
+/* Footer */
+footer {
+  max-width: 840px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding: 0.5rem 1rem;
+}
+
+footer p {
+  margin: 0;
+  font-size: 0.9rem;
+  color: black;
+}
+.socialmedia {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.socialmedia img {
+  width: 30px;
+  height: 30px;
+  
+  border-radius: 6px;
+}
